--- a/style1.css
+++ b/style1.css
@@ -31,6 +31,7 @@
         -ms-user-select: none;
             user-select: none;
     cursor: all-scroll;
+    overflow: hidden;
   }
   
   .slider-control {
